cmake_minimum_required(VERSION 3.24)
project(CLion C)

set(CMAKE_C_STANDARD 11)

#add_executable(CLion Assignment_1/kjs.c)
#add_executable(CLion heap/bjy.c)
#add_executable(CLion Assignment_2/data/subway.c)
add_executable(CLion bjy/subway.c Assignment_2/data/subway.dSYM/asd.c)
#add_executable(CLion heap/lhs.c)